--- a/mc3-runners-community/MC3-Running/View/Base.lproj/Run.storyboard
+++ b/mc3-runners-community/MC3-Running/View/Base.lproj/Run.storyboard
@@ -198,7 +198,7 @@
                                 <rect key="frame" x="0.0" y="88" width="375" height="631"/>
                             </mapView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fu8-wz-REF">
-                                <rect key="frame" x="0.0" y="536" width="375" height="276"/>
+                                <rect key="frame" x="0.0" y="470" width="375" height="332"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Riw-e5-Cuj">
                                         <rect key="frame" x="32" y="28" width="311" height="44"/>
@@ -220,6 +220,14 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pep-us-7bO">
+                                        <rect key="frame" x="31" y="151" width="311" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <segue destination="EVE-s0-iPW" kind="unwind" unwindAction="unwindToRun:" id="VQq-vH-Jwn"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" red="0.90980392156862744" green="0.97254901960784312" blue="0.99607843137254903" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
@@ -228,10 +236,10 @@
                                     <constraint firstItem="dhB-C6-tat" firstAttribute="leading" secondItem="fu8-wz-REF" secondAttribute="leading" constant="32" id="CA0-8E-9eN"/>
                                     <constraint firstAttribute="trailing" secondItem="dhB-C6-tat" secondAttribute="trailing" constant="32" id="CWH-Fa-dns"/>
                                     <constraint firstItem="iQB-I4-ogS" firstAttribute="top" secondItem="dhB-C6-tat" secondAttribute="bottom" constant="-35" id="PO8-XJ-4T8"/>
-                                    <constraint firstAttribute="height" constant="276" id="W5M-Ym-PKR"/>
+                                    <constraint firstAttribute="height" constant="332" id="W5M-Ym-PKR"/>
                                     <constraint firstItem="Riw-e5-Cuj" firstAttribute="leading" secondItem="fu8-wz-REF" secondAttribute="leading" constant="32" id="ZM4-nK-1ZE"/>
                                     <constraint firstItem="Vh8-A6-iFa" firstAttribute="bottom" secondItem="Riw-e5-Cuj" secondAttribute="bottom" constant="-9" id="aCq-Lj-eFe"/>
-                                    <constraint firstAttribute="bottom" secondItem="dhB-C6-tat" secondAttribute="bottom" constant="148" id="eYT-bY-Eap"/>
+                                    <constraint firstAttribute="bottom" secondItem="dhB-C6-tat" secondAttribute="bottom" constant="204" id="eYT-bY-Eap"/>
                                     <constraint firstItem="Vh8-A6-iFa" firstAttribute="top" secondItem="Riw-e5-Cuj" secondAttribute="top" constant="9" id="gaG-t0-TmM"/>
                                     <constraint firstItem="Riw-e5-Cuj" firstAttribute="top" secondItem="fu8-wz-REF" secondAttribute="top" constant="28" id="ldX-Hq-Bao"/>
                                     <constraint firstItem="iQB-I4-ogS" firstAttribute="centerX" secondItem="dhB-C6-tat" secondAttribute="centerX" constant="45.5" id="nev-wV-uT6"/>
@@ -240,22 +248,13 @@
                                     <constraint firstAttribute="trailing" secondItem="Riw-e5-Cuj" secondAttribute="trailing" constant="32" id="xnK-LV-rcu"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="42w-X4-0rc">
-                                <rect key="frame" x="279" y="461" width="80" height="67"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Draw"/>
-                                <connections>
-                                    <action selector="drawing:" destination="PMb-9l-JIp" eventType="touchUpInside" id="Gou-uX-vtk"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.90980392160000001" green="0.97254901959999995" blue="0.99607843139999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="OeY-g5-XyT" firstAttribute="top" secondItem="p6g-BL-uXQ" secondAttribute="top" id="64Z-Mc-kag"/>
                             <constraint firstItem="OeY-g5-XyT" firstAttribute="trailing" secondItem="p6g-BL-uXQ" secondAttribute="trailing" id="Hsg-ax-Gov"/>
                             <constraint firstItem="fu8-wz-REF" firstAttribute="leading" secondItem="p6g-BL-uXQ" secondAttribute="leading" id="KFX-VR-DOp"/>
-                            <constraint firstAttribute="bottom" secondItem="fu8-wz-REF" secondAttribute="bottom" id="QHG-Dv-Af5"/>
+                            <constraint firstAttribute="bottom" secondItem="fu8-wz-REF" secondAttribute="bottom" constant="10" id="QHG-Dv-Af5"/>
                             <constraint firstItem="OeY-g5-XyT" firstAttribute="bottom" secondItem="p6g-BL-uXQ" secondAttribute="bottom" constant="34" id="aOa-Z3-p1e"/>
                             <constraint firstItem="OeY-g5-XyT" firstAttribute="leading" secondItem="p6g-BL-uXQ" secondAttribute="leading" id="fwB-gp-Sq3"/>
                             <constraint firstItem="fu8-wz-REF" firstAttribute="trailing" secondItem="p6g-BL-uXQ" secondAttribute="trailing" id="t4f-Dr-3FD"/>
@@ -265,12 +264,14 @@
                     <toolbarItems/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="bottomView" destination="fu8-wz-REF" id="1J0-fe-F9t"/>
                         <outlet property="currentLoc" destination="Vh8-A6-iFa" id="3hP-1P-rNq"/>
                         <outlet property="enterPoint" destination="iQB-I4-ogS" id="lXq-Sb-wqo"/>
                         <outlet property="mapView" destination="OeY-g5-XyT" id="UtE-Y5-FcC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="94U-wA-Q9H" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="EVE-s0-iPW" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="2708" y="996.79802955665025"/>
         </scene>
