--- a/mc3-runners-community/MC3-Running/View/Base.lproj/Run.storyboard
+++ b/mc3-runners-community/MC3-Running/View/Base.lproj/Run.storyboard
@@ -200,52 +200,52 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fu8-wz-REF">
                                 <rect key="frame" x="0.0" y="470" width="375" height="332"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Riw-e5-Cuj">
-                                        <rect key="frame" x="32" y="28" width="311" height="44"/>
-                                        <state key="normal" image="Startpoint"/>
-                                    </button>
-                                    <button opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dhB-C6-tat">
-                                        <rect key="frame" x="32" y="84" width="311" height="44"/>
-                                        <state key="normal" image="addpoint"/>
-                                    </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Search" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vh8-A6-iFa">
-                                        <rect key="frame" x="144" y="37" width="178" height="26"/>
-                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.30000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter point" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iQB-I4-ogS">
-                                        <rect key="frame" x="144" y="93" width="178" height="26"/>
-                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="20"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pep-us-7bO">
                                         <rect key="frame" x="31" y="151" width="311" height="30"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="Button"/>
+                                        <color key="backgroundColor" red="1" green="0.38431372549999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                        <state key="normal" title="Create Route">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
                                         <connections>
                                             <segue destination="EVE-s0-iPW" kind="unwind" unwindAction="unwindToRun:" id="VQq-vH-Jwn"/>
                                         </connections>
                                     </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text=" Start point:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vl2-1Q-QOy">
+                                        <rect key="frame" x="38" y="30" width="304" height="39"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text=" Distance:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wJW-Vq-20M">
+                                        <rect key="frame" x="38" y="86" width="304" height="39"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.29999999999999999" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Search" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vh8-A6-iFa">
+                                        <rect key="frame" x="130" y="37" width="178" height="26"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" alpha="0.30000001192092896" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Enter point" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iQB-I4-ogS">
+                                        <rect key="frame" x="129" y="93" width="178" height="26"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" red="0.90980392156862744" green="0.97254901960784312" blue="0.99607843137254903" alpha="0.80000000000000004" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
-                                    <constraint firstItem="iQB-I4-ogS" firstAttribute="trailing" secondItem="dhB-C6-tat" secondAttribute="trailing" constant="-21" id="9p4-Gd-B6V"/>
-                                    <constraint firstItem="Vh8-A6-iFa" firstAttribute="leading" secondItem="Riw-e5-Cuj" secondAttribute="leading" constant="112" id="BI6-Vg-s3r"/>
-                                    <constraint firstItem="dhB-C6-tat" firstAttribute="leading" secondItem="fu8-wz-REF" secondAttribute="leading" constant="32" id="CA0-8E-9eN"/>
-                                    <constraint firstAttribute="trailing" secondItem="dhB-C6-tat" secondAttribute="trailing" constant="32" id="CWH-Fa-dns"/>
-                                    <constraint firstItem="iQB-I4-ogS" firstAttribute="top" secondItem="dhB-C6-tat" secondAttribute="bottom" constant="-35" id="PO8-XJ-4T8"/>
                                     <constraint firstAttribute="height" constant="332" id="W5M-Ym-PKR"/>
-                                    <constraint firstItem="Riw-e5-Cuj" firstAttribute="leading" secondItem="fu8-wz-REF" secondAttribute="leading" constant="32" id="ZM4-nK-1ZE"/>
-                                    <constraint firstItem="Vh8-A6-iFa" firstAttribute="bottom" secondItem="Riw-e5-Cuj" secondAttribute="bottom" constant="-9" id="aCq-Lj-eFe"/>
-                                    <constraint firstAttribute="bottom" secondItem="dhB-C6-tat" secondAttribute="bottom" constant="204" id="eYT-bY-Eap"/>
-                                    <constraint firstItem="Vh8-A6-iFa" firstAttribute="top" secondItem="Riw-e5-Cuj" secondAttribute="top" constant="9" id="gaG-t0-TmM"/>
-                                    <constraint firstItem="Riw-e5-Cuj" firstAttribute="top" secondItem="fu8-wz-REF" secondAttribute="top" constant="28" id="ldX-Hq-Bao"/>
-                                    <constraint firstItem="iQB-I4-ogS" firstAttribute="centerX" secondItem="dhB-C6-tat" secondAttribute="centerX" constant="45.5" id="nev-wV-uT6"/>
-                                    <constraint firstItem="dhB-C6-tat" firstAttribute="top" secondItem="Riw-e5-Cuj" secondAttribute="bottom" constant="12" id="q5Z-iE-U81"/>
-                                    <constraint firstItem="Vh8-A6-iFa" firstAttribute="trailing" secondItem="Riw-e5-Cuj" secondAttribute="trailing" constant="-21" id="t5l-NS-sPf"/>
-                                    <constraint firstAttribute="trailing" secondItem="Riw-e5-Cuj" secondAttribute="trailing" constant="32" id="xnK-LV-rcu"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -265,9 +265,12 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="bottomView" destination="fu8-wz-REF" id="1J0-fe-F9t"/>
+                        <outlet property="createButton" destination="Pep-us-7bO" id="J8A-Uv-g9P"/>
                         <outlet property="currentLoc" destination="Vh8-A6-iFa" id="3hP-1P-rNq"/>
+                        <outlet property="distanceLabel" destination="wJW-Vq-20M" id="U1F-4D-dca"/>
                         <outlet property="enterPoint" destination="iQB-I4-ogS" id="lXq-Sb-wqo"/>
                         <outlet property="mapView" destination="OeY-g5-XyT" id="UtE-Y5-FcC"/>
+                        <outlet property="startPoint" destination="vl2-1Q-QOy" id="e5v-XG-11F"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="94U-wA-Q9H" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -388,9 +391,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Startpoint" width="311" height="44"/>
         <image name="addRoute_button" width="56" height="56"/>
-        <image name="addpoint" width="311" height="44"/>
         <image name="calories_Icon" width="65" height="56"/>
         <image name="distance_Icon" width="65" height="56"/>
         <image name="pace_Icon" width="65" height="56"/>
